<resources>
    <string name="app_name">pracBook</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="main_activity">Main Activity</string>
    <string name="homepage">HomePage</string>
    <string name="logout">Logout</string>
    <string name="get_book">Get Book</string>
    <string name="liked">Like</string>
    <string name="dilike">Dilike</string>
    <string name="welcome">Welcome Back!</string>
    <string name="login_account">Login to your account."</string>
    <string name="create_account">"Want to create a new account?"</string>
    <string name="register_account">"Create your new account!"</string>
    <string name="home">"Home"</string>
    <string name="search">"Search"</string>
    <string name="appname">"BookBae"</string>
    <string name="heart">"♡"</string>


    <!-- Library   -->
    <string name="myLib">"My Library"</string>
    <string name="Reading">"Reading"</string>
    <string name="TBD">"To Be Read"</string>
    <string name="read">"Read"</string>
    <string name="completed">"Completed</string>
    <string name="dropped">"Dropped</string>

    <!--Profile   -->
    <string name="newPassword">"New Password</string>
    <string name="updateEmail">"Update Email"</string>
    <string name="updatePassword">"Update Password"</string>
    <string name="deleteAccount">"Delete Account"</string>
    <string name="accountDetails">"--- Account Settings ---</string>

    <!--Dropdown Fragment    -->
    <string name="addTo">"Add to:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>