<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="center"
    tools:context=".Register">


    <TextView
        android:id="@+id/register"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/register"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="345dp"
        android:layout_height="32dp"
        android:layout_marginTop="1dp"
        android:text="@string/register_account"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="341dp"
        android:layout_height="21dp"

        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="466dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="371dp"
        android:layout_height="43dp"
        android:background="#bef0f1"
        android:text="@string/register"
        android:textColor="#136b7f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Already have an account?"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/already_have_account"
        app:layout_constraintVertical_bias="0.049" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="371dp"
        android:layout_height="43dp"
        android:background="#68adb7"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.122">

    </com.google.android.material.textfield.TextInputEditText>
<!--Might be an issue later with the @+id/email -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="371dp"
        android:layout_height="43dp"
        android:background="#68adb7"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded">


    </com.google.android.material.textfield.TextInputEditText>


</androidx.constraintlayout.widget.ConstraintLayout>