<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".Home">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="670dp"
    android:layout_above="@+id/bottomNav"
    android:layout_alignParentTop="true"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    android:gravity="center|top">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/mainBgColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/apptitleguide"
            app:layout_constraintTop_toTopOf="@+id/bookcover_top_guideline">

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_dislikebook"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:text="X"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/middleguideline"
        app:layout_constraintStart_toStartOf="@+id/apptitleguide"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/btn_likebook"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:drawablePadding="8dp"
        android:text="@string/heart"
        android:textColor="@color/white"
        android:textFontWeight="@integer/material_motion_duration_medium_1"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/middleguideline"
        app:layout_constraintTop_toTopOf="@+id/guideline7"

        />

    <TextView
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BOOK"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/middleguideline"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.161"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_getbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_book"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Hello World"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:visibility="gone"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:visibility="gone"/>



    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/apptitleguide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bookcover_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottomNav"
        android:layout_below="@id/appName"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintTop_toBottomOf="@id/appName" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp"
        android:scrollIndicators="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/my_menu" />

</RelativeLayout>
